@@ -1,208 +1,317 @@
 package com.taskbot.handler;
 
-import com.taskbot.database.DatabaseManager;
+import com.taskbot.model.Subtask;
+import com.taskbot.model.ParsedTaskAction;
 import com.taskbot.model.Task;
+import com.taskbot.service.TaskService;
+import com.taskbot.util.DateTimeUtil;
+import com.taskbot.util.MessageFormatter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.List;
 
 public class CommandHandler {
     private static final Logger logger = LoggerFactory.getLogger(CommandHandler.class);
-    private final DatabaseManager db;
-    private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
 
-    public CommandHandler(DatabaseManager db) {
-        this.db = db;
+    private final TaskService taskService;
+
+    public CommandHandler(TaskService taskService) {
+        this.taskService = taskService;
+    }
+
+    public void registerUser(long telegramId, String username, String firstName) {
+        taskService.registerUser(telegramId, username, firstName);
     }
 
     public String handleHelp() {
         return "📋 Task Manager Bot Commands\n\n" +
-                "Task Management:\n" +
-                "/add_task - Add a new task\n" +
-                "/list_tasks - View all your tasks\n" +
-                "/complete_task <id> - Mark task as done\n" +
-                "/edit_task <id> - Edit existing task\n" +
-                "/delete_task <id> - Delete a task\n\n" +
-                "Available Priorities:\n" +
-                "1 - 🟢 Low\n" +
-                "2 - 🟡 Medium\n" +
-                "3 - 🔴 High\n\n" +
-                "Date Format: dd/MM/yyyy HH:mm\n" +
-                "Example: 15/03/2025 14:30\n\n" +
-                "Use /help to see this message anytime.";
+                "Task utama:\n" +
+                "/add_task - Tambah task baru\n" +
+                "/list_tasks - Lihat semua task\n" +
+                "/complete_task <id> - Tandai task selesai\n" +
+                "/edit_task - Edit task dengan format lengkap\n" +
+                "/edit_task <id> - Edit task tertentu lewat langkah berikutnya\n" +
+                "/delete_task <id> - Hapus task\n\n" +
+                "Filter dan pencarian:\n" +
+                "/today - Task due hari ini\n" +
+                "/tomorrow - Task due besok\n" +
+                "/overdue - Task yang terlambat\n" +
+                "/high_priority - Task prioritas tinggi\n" +
+                "/search <keyword> - Cari task\n" +
+                "/stats - Statistik produktivitas\n\n" +
+                "AI assistant:\n" +
+                "/ask <pertanyaan> - Tanya AI untuk bantu belajar atau tugas\n" +
+                "Contoh: /ask jelasin polymorphism Java secara singkat\n\n" +
+                "Subtask/checklist:\n" +
+                "/add_subtask <task_id> <judul subtask>\n" +
+                "/list_subtasks <task_id>\n" +
+                "/done_subtask <subtask_id>\n" +
+                "/delete_subtask <subtask_id>\n\n" +
+                "Recurring task:\n" +
+                "/repeat <task_id> <daily|weekly|monthly>\n" +
+                "Contoh: /repeat 4 weekly\n\n" +
+                "Format tanggal: dd/MM/yyyy HH:mm\n" +
+                "Contoh: 15/03/2025 14:30";
     }
 
     public String initAddTask() {
-        return "📝 Let's add a new task!\n\n" +
-                "Please provide the task details in this format:\n" +
+        return "📝 Tambah task baru\n\n" +
+                "Format:\n" +
                 "<title> | <description> | <due_date> | <priority>\n\n" +
-                "Example:\n" +
-                "Finish project report | Complete Q1 analysis | 15/03/2025 14:30 | 3\n\n" +
-                "Priority levels:\n" +
-                "1 = Low, 2 = Medium, 3 = High\n\n" +
-                "You can omit due date and priority:\n" +
-                "Finish project report | Complete Q1 analysis";
+                "Contoh:\n" +
+                "Kerjain laporan PBO | Bab database dan class diagram | 15/05/2026 20:00 | 3\n\n" +
+                "Priority: 1 = Low, 2 = Medium, 3 = High\n" +
+                "Due date dan priority boleh dikosongkan.";
     }
 
-    public String addTask(String userId, String input) {
+    public String addTask(long telegramId, String input) {
         try {
-            String[] parts = input.split("\\|");
-            if (parts.length < 1) {
-                return "❌ Invalid format! Use: <title> | <description> | <due_date> | <priority>";
+            String[] parts = input.split("\\|", -1);
+            String title = parts.length > 0 ? parts[0].trim() : "";
+            if (title.isBlank()) {
+                return "Judul task tidak boleh kosong.";
             }
 
-            String title = parts[0].trim();
             String description = parts.length > 1 ? parts[1].trim() : "";
             LocalDateTime dueDate = null;
-            int priority = 2; // Default medium
+            int priority = 2;
 
-            if (parts.length > 2 && !parts[2].trim().isEmpty()) {
-                try {
-                    dueDate = LocalDateTime.parse(parts[2].trim(), DATE_FORMATTER);
-                } catch (DateTimeParseException e) {
-                    return "❌ Invalid date format! Use: dd/MM/yyyy HH:mm";
-                }
+            if (parts.length > 2 && !parts[2].trim().isBlank()) {
+                dueDate = DateTimeUtil.parseUserDateTime(parts[2]);
+            }
+            if (parts.length > 3 && !parts[3].trim().isBlank()) {
+                priority = parsePriority(parts[3].trim());
             }
 
-            if (parts.length > 3 && !parts[3].trim().isEmpty()) {
-                try {
-                    priority = Integer.parseInt(parts[3].trim());
-                    if (priority < 1 || priority > 3) {
-                        return "❌ Priority must be 1 (Low), 2 (Medium), or 3 (High)";
-                    }
-                } catch (NumberFormatException e) {
-                    return "❌ Priority must be a number (1, 2, or 3)";
-                }
-            }
-
-            Task task = db.addTask(userId, title, description, dueDate, priority);
-            if (task != null) {
-                return "✅ Task Added Successfully!\n\n" + task.formatForDisplay();
-            } else {
-                return "❌ Error adding task. Please try again.";
-            }
+            Task task = taskService.addTask(telegramId, title, description, dueDate, priority);
+            return "✅ Task berhasil ditambahkan!\n\n" + MessageFormatter.formatTask(task);
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
         } catch (Exception e) {
             logger.error("Error in addTask", e);
-            return "❌ Error processing your request. Please try again.";
+            return "Terjadi error saat menambah task. Coba lagi ya.";
         }
     }
 
-    public String listTasks(String userId) {
-        List<Task> tasks = db.getUserTasks(userId);
+    public String addParsedTask(long telegramId, ParsedTaskAction parsed) {
+        try {
+            if (parsed == null || !"add_task".equalsIgnoreCase(parsed.getAction())) {
+                return "AI belum menemukan task yang jelas dari pesan itu.";
+            }
+            if (parsed.getTitle() == null || parsed.getTitle().isBlank()) {
+                return "Judul task belum jelas.";
+            }
 
-        if (tasks.isEmpty()) {
-            return "📭 You have no tasks yet!\n\nUse /add_task to create one.";
-        }
+            int priority = parsed.getPriority() == null ? 2 : parsed.getPriority();
+            if (priority < 1 || priority > 3) {
+                priority = 2;
+            }
 
-        StringBuilder sb = new StringBuilder("📋 *Your Tasks*\n\n");
-        for (Task task : tasks) {
-            sb.append(task.formatForDisplay()).append("\n\n" + "—".repeat(40) + "\n\n");
+            Task task = taskService.addTask(
+                    telegramId,
+                    parsed.getTitle(),
+                    parsed.getDescription() == null ? "" : parsed.getDescription(),
+                    parsed.getDueDate(),
+                    priority
+            );
+            return "✅ Task berhasil dibuat dari AI!\n\n" + MessageFormatter.formatTask(task);
+        } catch (Exception e) {
+            logger.error("Error in addParsedTask", e);
+            return "AI berhasil membaca pesan, tapi task gagal disimpan. Coba lagi ya.";
         }
-        return sb.toString();
+    }
+
+    public String listTasks(long telegramId) {
+        return MessageFormatter.formatTaskList("📋 Daftar Task", taskService.listTasks(telegramId));
+    }
+
+    public String listToday(long telegramId) {
+        return MessageFormatter.formatTaskList("📅 Task Hari Ini", taskService.listDueOn(telegramId, LocalDate.now()));
+    }
+
+    public String listTomorrow(long telegramId) {
+        return MessageFormatter.formatTaskList("📅 Task Besok", taskService.listDueOn(telegramId, LocalDate.now().plusDays(1)));
+    }
+
+    public String listOverdue(long telegramId) {
+        return MessageFormatter.formatTaskList("⚠️ Task Overdue", taskService.listOverdue(telegramId));
+    }
+
+    public String listHighPriority(long telegramId) {
+        return MessageFormatter.formatTaskList("🔴 High Priority Tasks", taskService.listHighPriority(telegramId));
+    }
+
+    public String search(long telegramId, String keyword) {
+        if (keyword == null || keyword.isBlank()) {
+            return "Gunakan format: /search <keyword>";
+        }
+        return MessageFormatter.formatTaskList("🔎 Hasil Search: " + keyword, taskService.search(telegramId, keyword.trim()));
+    }
+
+    public String stats(long telegramId) {
+        return MessageFormatter.formatStats(taskService.getStats(telegramId));
     }
 
     public String initEditTask() {
         return "✏️ Edit Task\n\n" +
-                "Please provide the task ID and new details:\n" +
+                "Format:\n" +
                 "<task_id> | <new_title> | <new_description> | <new_due_date> | <new_priority>\n\n" +
-                "Example:\n" +
-                "1 | Updated Title | New description | 20/03/2025 10:00 | 2";
+                "Contoh:\n" +
+                "4 | Kerjain laporan PBO revisi | Lengkapi bagian DAO | 15/05/2026 20:00 | 3";
     }
 
-    public String editTask(String userId, String input) {
+    public String initEditTaskWithId(String taskId) {
+        return "✏️ Edit Task #" + taskId + "\n\n" +
+                "Kirim detail baru dengan format:\n" +
+                "<new_title> | <new_description> | <new_due_date> | <new_priority>\n\n" +
+                "Contoh:\n" +
+                "Kerjain laporan PBO revisi | Lengkapi bagian DAO | 15/05/2026 20:00 | 3";
+    }
+
+    public String editTask(long telegramId, String input) {
         try {
-            String[] parts = input.split("\\|");
+            String[] parts = input.split("\\|", -1);
             if (parts.length < 2) {
-                return "❌ Invalid format! Use: <task_id> | <new_title> | <new_description> | <new_due_date> | <new_priority>";
+                return "Format salah. Gunakan: <task_id> | <new_title> | <new_description> | <new_due_date> | <new_priority>";
             }
 
-            int taskId;
-            try {
-                taskId = Integer.parseInt(parts[0].trim());
-            } catch (NumberFormatException e) {
-                return "❌ Task ID must be a number!";
-            }
-
-            Task existingTask = db.getTask(userId, taskId);
+            int taskId = parseId(parts[0], "Task ID");
+            Task existingTask = taskService.getTask(telegramId, taskId);
             if (existingTask == null) {
-                return "❌ Task not found!";
+                return "Task tidak ditemukan.";
             }
 
-            String newTitle = parts.length > 1 && !parts[1].trim().isEmpty() ? parts[1].trim() : existingTask.getTitle();
-            String newDescription = parts.length > 2 ? parts[2].trim() : existingTask.getDescription();
-            LocalDateTime newDueDate = existingTask.getDueDate();
-            int newPriority = existingTask.getPriority();
+            String title = !parts[1].trim().isBlank() ? parts[1].trim() : existingTask.getTitle();
+            String description = parts.length > 2 ? parts[2].trim() : existingTask.getDescription();
+            LocalDateTime dueDate = existingTask.getDueDate();
+            int priority = existingTask.getPriority();
 
-            if (parts.length > 3 && !parts[3].trim().isEmpty()) {
-                try {
-                    newDueDate = LocalDateTime.parse(parts[3].trim(), DATE_FORMATTER);
-                } catch (DateTimeParseException e) {
-                    return "❌ Invalid date format! Use: dd/MM/yyyy HH:mm";
-                }
+            if (parts.length > 3 && !parts[3].trim().isBlank()) {
+                dueDate = DateTimeUtil.parseUserDateTime(parts[3]);
+            }
+            if (parts.length > 4 && !parts[4].trim().isBlank()) {
+                priority = parsePriority(parts[4].trim());
             }
 
-            if (parts.length > 4 && !parts[4].trim().isEmpty()) {
-                try {
-                    newPriority = Integer.parseInt(parts[4].trim());
-                    if (newPriority < 1 || newPriority > 3) {
-                        return "❌ Priority must be 1, 2, or 3";
-                    }
-                } catch (NumberFormatException e) {
-                    return "❌ Priority must be a number!";
-                }
+            boolean updated = taskService.updateTask(telegramId, taskId, title, description, dueDate, priority);
+            if (!updated) {
+                return "Task gagal diupdate.";
             }
-
-            if (db.updateTask(userId, taskId, newTitle, newDescription, newDueDate, newPriority)) {
-                Task updatedTask = db.getTask(userId, taskId);
-                return "✅ Task Updated!\n\n" + updatedTask.formatForDisplay();
-            } else {
-                return "❌ Error updating task. Please try again.";
-            }
+            return "✅ Task berhasil diupdate!\n\n" + MessageFormatter.formatTask(taskService.getTask(telegramId, taskId));
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
         } catch (Exception e) {
             logger.error("Error in editTask", e);
-            return "❌ Error processing your request.";
+            return "Terjadi error saat edit task.";
         }
     }
 
-    public String completeTask(String userId, String taskIdStr) {
+    public String completeTask(long telegramId, String taskIdText) {
         try {
-            int taskId = Integer.parseInt(taskIdStr.trim());
-            Task task = db.getTask(userId, taskId);
-
+            int taskId = parseId(taskIdText, "Task ID");
+            Task task = taskService.completeTask(telegramId, taskId);
             if (task == null) {
-                return "❌ Task not found!";
+                return "Task tidak ditemukan.";
             }
-
-            if (db.completeTask(userId, taskId)) {
-                return "✅ Task Completed!\n\n" + db.getTask(userId, taskId).formatForDisplay();
-            } else {
-                return "❌ Error completing task.";
-            }
-        } catch (NumberFormatException e) {
-            return "❌ Please provide a valid task ID!";
+            return "✅ Task selesai!\n\n" + MessageFormatter.formatTask(task);
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
         }
     }
 
-    public String deleteTask(String userId, String taskIdStr) {
+    public String deleteTask(long telegramId, String taskIdText) {
         try {
-            int taskId = Integer.parseInt(taskIdStr.trim());
-            Task task = db.getTask(userId, taskId);
+            int taskId = parseId(taskIdText, "Task ID");
+            return taskService.deleteTask(telegramId, taskId)
+                    ? "🗑️ Task #" + taskId + " berhasil dihapus."
+                    : "Task tidak ditemukan.";
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
+        }
+    }
 
-            if (task == null) {
-                return "❌ Task not found!";
+    public String addSubtask(long telegramId, String args) {
+        try {
+            String[] parts = args.trim().split("\\s+", 2);
+            if (parts.length < 2 || parts[1].isBlank()) {
+                return "Gunakan format: /add_subtask <task_id> <judul subtask>";
             }
+            int taskId = parseId(parts[0], "Task ID");
+            Subtask subtask = taskService.addSubtask(telegramId, taskId, parts[1].trim());
+            if (subtask == null) {
+                return "Task tidak ditemukan.";
+            }
+            return "✅ Subtask ditambahkan: #" + subtask.getId() + " " + subtask.getTitle();
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
+        }
+    }
 
-            if (db.deleteTask(userId, taskId)) {
-                return "🗑️ Task Deleted!\n\nTask ID: " + taskId + " has been removed.";
-            } else {
-                return "❌ Error deleting task.";
+    public String listSubtasks(long telegramId, String taskIdText) {
+        try {
+            int taskId = parseId(taskIdText, "Task ID");
+            List<Subtask> subtasks = taskService.listSubtasks(telegramId, taskId);
+            return MessageFormatter.formatSubtasks(subtasks);
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
+        }
+    }
+
+    public String doneSubtask(long telegramId, String subtaskIdText) {
+        try {
+            int subtaskId = parseId(subtaskIdText, "Subtask ID");
+            return taskService.markSubtaskDone(telegramId, subtaskId)
+                    ? "✅ Subtask #" + subtaskId + " selesai."
+                    : "Subtask tidak ditemukan.";
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
+        }
+    }
+
+    public String deleteSubtask(long telegramId, String subtaskIdText) {
+        try {
+            int subtaskId = parseId(subtaskIdText, "Subtask ID");
+            return taskService.deleteSubtask(telegramId, subtaskId)
+                    ? "🗑️ Subtask #" + subtaskId + " dihapus."
+                    : "Subtask tidak ditemukan.";
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
+        }
+    }
+
+    public String repeatTask(long telegramId, String args) {
+        try {
+            String[] parts = args.trim().split("\\s+");
+            if (parts.length < 2) {
+                return "Gunakan format: /repeat <task_id> <daily|weekly|monthly>";
             }
+            int taskId = parseId(parts[0], "Task ID");
+            return taskService.repeatTask(telegramId, taskId, parts[1]);
+        } catch (IllegalArgumentException e) {
+            return e.getMessage();
+        }
+    }
+
+    private int parseId(String value, String label) {
+        try {
+            return Integer.parseInt(value.trim());
         } catch (NumberFormatException e) {
-            return "❌ Please provide a valid task ID!";
+            throw new IllegalArgumentException(label + " harus berupa angka.");
+        }
+    }
+
+    private int parsePriority(String value) {
+        try {
+            int priority = Integer.parseInt(value);
+            if (priority < 1 || priority > 3) {
+                throw new IllegalArgumentException("Priority harus 1 (Low), 2 (Medium), atau 3 (High).");
+            }
+            return priority;
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("Priority harus berupa angka: 1, 2, atau 3.");
         }
     }
 }
